# yuzu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: tests.yml
python_scripts/: requirements.txt  test_embed.py
src/: main.rs
src/commands/: embed.rs  lang.rs  mod.rs
src/utils/: hf.rs  io.rs  iter.rs  mod.rs  pooling.rs  select.rs  writers.rs
tests/: heavy.rs  test_embed.rs  test_lang.rs  tests.rs  utils.rs
