[package]
name = "yuzu"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
authors = [
  "Béatrice Mazoyer <beatrice.mazoyer@sciencespo.fr>",
  "Guillaume Plique <guillaume.plique@sciencespo.fr>",
]

[[bin]]
name = "yuzu"
test = true
bench = false
doctest = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-fast]
inherits = "release"
codegen-units = 16
lto = false

[profile.release-debug]
inherits = "release"
codegen-units = 16
strip = false
debug = true
lto = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["color", "derive"] }
hf-hub = "0.4.3"
ndarray = "0.16.1"
ort = "2.0.0-rc.10"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1.0"
simd-csv = "0.10.2"
tokenizers = "0.22.1"