[package]
name = "yuzu"
version = "0.1.0-rc.1"
edition = "2024"
autotests = false
rust-version = "1.85.1"
license = "GPL-3.0"
description = "Use language models from the command line"
repository = "https://github.com/medialab/yuzu"
homepage = "https://github.com/medialab/yuzu"
authors = [
  "Béatrice Mazoyer <beatrice.mazoyer@sciencespo.fr>",
  "Guillaume Plique <guillaume.plique@sciencespo.fr>",
]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**/*.rs",
]

[[bin]]
name = "yuzu"
test = false
bench = false
doctest = false

[[test]]
name = "tests"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-fast]
inherits = "release"
codegen-units = 16
lto = false

[profile.release-debug]
inherits = "release"
codegen-units = 16
strip = false
debug = true
lto = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["color", "derive"] }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
hf-hub = "0.4.3"
ndarray = "0.16.1"
npyz = { git = "https://github.com/medialab/npyz", rev = "361c892a" }
ort = "2.0.0-rc.10"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1.0"
simd-csv = "0.12.0"
tokenizers = "0.22.1"
whichlang = { git = "https://github.com/medialab/whichlang", rev = "92591fa2" }
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.1.2"
